# patch_scene

./: .cmake-format.py  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  about_shortcuts.cpp  about_shortcuts.h  about_shortcuts.ui  about_window.cpp  about_window.h  about_window.ui  app.rc  app_settings.cpp  app_settings.h  app_updater_window.cpp  app_updater_window.h  app_updater_window.ui  app_version.cpp  app_version.h  application.cpp  application.h  background_properties_dialog.cpp  background_properties_dialog.h  background_properties_dialog.ui  battery.cpp  battery.h  battery_item_model.cpp  battery_item_model.h  bezier_editor_handle.cpp  bezier_editor_handle.h  cables_resources.qrc  cell_index.h  comment.cpp  comment.h  comment_editor.cpp  comment_editor.h  comment_editor.ui  comment_item.cpp  comment_item.h  connection.cpp  (+149 more)
cmake/: git_version.cmake  git_version_generate_header.cmake  icon_tools.cmake  jq_format.cmake  mingw_deploy.cmake.in  summary.cmake
resources/: dmg_settings.json  library.json  patch_scene.icns  patch_scene_file.icns  patch_scene_resources.qrc  updates.in.json  updates.json
scripts/: bundle_fix.sh  macos_build_make.sh  macos_build_ninja.sh  macos_deploy.sh  macos_make_dmg.sh  mingw_build_make.sh  mingw_build_ninja.sh  mingw_deploy.sh  mingw_deploy_all.sh
tests/: CMakeLists.txt  json_common.cpp  json_common.h  test_comment.cpp  test_comment.h  test_comment_item.cpp  test_comment_item.h  test_common.cpp  test_common.h  test_connection.cpp  test_connection.h  test_connection_database.cpp  test_connection_database.h  test_connection_view_data.cpp  test_connection_view_data.h  test_connector_type.cpp  test_connector_type.h  test_device.cpp  test_device.h  test_device_data.cpp  test_device_data.h  test_device_item.cpp  test_device_item.h  test_device_library.cpp  test_device_library.h  test_device_library_1.json  test_device_library_2.json  test_device_library_3.json  test_device_library_lib1.json  test_device_xlet_view.cpp  test_device_xlet_view.h  test_diagram.cpp  test_diagram.h  test_diagram_image.cpp  test_diagram_image.h  test_diagram_scene.cpp  test_diagram_scene.h  test_main.cpp  test_scene.cpp  test_scene.h  (+18 more)
